B00.002 - Add File Report component
- Add component for report file type and sizes.
- Change some loops with foreach by 'for', performance.
- Add log for execution time.
- Start some modifications for add support for long file names (by pass
Win API in .net).

--- a/DocCore/App.config
+++ b/DocCore/App.config
@@ -7,7 +7,7 @@
 
     <add key="logIsActive" value="true" />
     <add key="logSeparator" value="|" />
-    <add key="logFilePath" value="D:\projetos\edoc\CodeRepository\eDoc\Test\Log" />
+    <add key="logFilePath" value="D:\projetos\edoc\CodeRepository\eDoc\Test\Log\ExecutionLog.txt" />
     <add key="logType" value="TXT" />
 
   </appSettings>
