--- a/Test/App.config
+++ b/Test/App.config
@@ -7,7 +7,7 @@
 
     <add key="logIsActive" value="true" />
     <add key="logSeparator" value="|" />
-    <add key="logFilePath" value="D:\projetos\edoc\CodeRepository\eDoc\Test\Log" />
+    <add key="logFilePath" value="D:\projetos\edoc\CodeRepository\eDoc\Test\Log\ExecutionLog.txt" />
     <add key="logType" value="TXT" />
 
   </appSettings>
