--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -52,9 +52,9 @@
       <SubType>
       </SubType>
     </None>
-    <None Include="RepositoryFiles\AdeliaBarros.pdf" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="RepositoryFiles\Copy of The Anatomy of a Large-Scale Hypertextual Web Search Engine.txt" />
     <Content Include="RepositoryFiles\The Anatomy of a Large-Scale Hypertextual Web Search Engine.txt" />
   </ItemGroup>
   <ItemGroup>
