B00.003 - In memory version with query item parser and marge result lists
- Don't repeat document in list result if two words are in many
documents.
- Add a query parser, seach words by Word id.
- Add maxResultList for a new structure (future) - return max K results.
- Modify old query Parser (clean sentence) for really remove forbbiden
chars. (bug fix)
- Even I remove forbbiden symbols, the lexicon has low size.
- Add structure for a Query repository, but I think that execution log
resolve..may be a good idea remove this in the future. I think that
component is redundant.
- Add structure for rank the results. But it doesn't work :( - to do a
bug fix.

--- a/DocCore/DocCore.csproj
+++ b/DocCore/DocCore.csproj
@@ -64,10 +64,11 @@
     <Compile Include="ExecutionLog\Repository\FactoryRepositoryLog.cs" />
     <Compile Include="ExecutionLog\Repository\RepositoryLogTXT.cs" />
     <Compile Include="ExecutionLog\Repository\IRepositoryLog.cs" />
-    <Compile Include="Sentence\RepositorySentence\IRepositorySentence.cs" />
-    <Compile Include="Sentence\RepositorySentence\RepositorySentenceTXT.cs" />
-    <Compile Include="Sentence\Sentence.cs" />
-    <Compile Include="Sentence\SentenceParser.cs" />
+    <Compile Include="Query\QueryItem.cs" />
+    <Compile Include="Query\RepositoryQuery\IRepositoryQuery.cs" />
+    <Compile Include="Query\RepositoryQuery\RepositoryQueryTXT.cs" />
+    <Compile Include="Query\Query.cs" />
+    <Compile Include="Query\QueryParser.cs" />
     <Compile Include="Util\Util.cs" />
     <Compile Include="Word\Word.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -80,6 +81,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Library\itextsharp.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Word\WordRepository\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
