--- a/FilesReport/App.config
+++ b/FilesReport/App.config
@@ -12,6 +12,14 @@
     <add key="reportFolder" value="D:\projetos\edoc\CodeRepository\eDoc\FilesReport\Report" />
     <add key="logType" value="TXT" />
     <add key="reportType" value="TXT" />
+    
+     <!--- Warning for longfileNameSupportType: If you have problems with files that has names with more than 255 chars, change this for true.
+        Supported type"s:
+         - NET: for .net default support
+         - LONG: for too long file names
+     --> 
+    
+    <add key="longfileNameSupportType" value="net" />
 
   </appSettings>
 </configuration>
