--- a/Test/App.config
+++ b/Test/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="pathFolderRepository" value="D:\projetos\edoc\CodeRepository\eDoc\Test\RepositoryFiles" />
+    <add key="pathFolderRepository" value="D:\projetos\edoc\RepositoryFiles\poli" />
     <add key="maxSentence" value="100" />
-    <add key="maxDocumentsFound" value="300" />
+    <add key="maxResultList" value="300" />
 
     <add key="logIsActive" value="true" />
     <add key="logSeparator" value="|" />
