Add Interfaces for Lexicon, DocumentIndex and reduce memory size of program
- Decrease memory size of Lexicon
- Change search method for use WordID (not Word Text)
- Remove Word Text from memory and from lexicon
- Add web interface for test
- Fix: First version of ranked query (doesn't consider phrase search or
proximity or words (next version?)

--- a/FilesReport/App.config
+++ b/FilesReport/App.config
@@ -1,17 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="pathFolderRepository" value="D:\projetos\edoc\CodeRepository\eDoc\FilesReport\Repository" />
-    <add key="maxSentence" value="100" />
-    <add key="maxDocumentsFound" value="300" />
+    <add key="pathFolderRepository" value="D:\projetos\edoc\CodeRepository\eDoc\FilesReport\Repository"/>
+    <add key="maxSentence" value="100"/>
+    <add key="maxDocumentsFound" value="300"/>
 
-    <add key="logIsActive" value="true" />
-    <add key="logSeparator" value="|" />
-    <add key="reportSeparator" value="|" />
-    <add key="logFilePath" value="D:\projetos\edoc\CodeRepository\eDoc\FilesReport\Log\ExecutionLog.txt" />
-    <add key="reportFolder" value="D:\projetos\edoc\CodeRepository\eDoc\FilesReport\Report" />
-    <add key="logType" value="TXT" />
-    <add key="reportType" value="TXT" />
+    <add key="logIsActive" value="true"/>
+    <add key="logSeparator" value="|"/>
+    <add key="reportSeparator" value="|"/>
+    <add key="logFilePath" value="D:\projetos\edoc\CodeRepository\eDoc\FilesReport\Log\ExecutionLog.txt"/>
+    <add key="reportFolder" value="D:\projetos\edoc\CodeRepository\eDoc\FilesReport\Report"/>
+    <add key="logType" value="TXT"/>
+    <add key="reportType" value="TXT"/>
     
      <!--- Warning for longfileNameSupportType: If you have problems with files that has names with more than 255 chars, change this for true.
         Supported type"s:
@@ -19,8 +19,7 @@
          - LONG: for too long file names
      --> 
     
-    <add key="longfileNameSupportType" value="net" />
+    <add key="longfileNameSupportType" value="net"/>
 
   </appSettings>
-</configuration>
-
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
