--- a/DocCore/DocCore.csproj
+++ b/DocCore/DocCore.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DocCore</RootNamespace>
     <AssemblyName>DocCore</AssemblyName>
-    <TargetFrameworkVersion>v3.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.5.5631.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="itextsharp, Version=5.5.8.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Library\itextsharp.dll</HintPath>
@@ -42,14 +44,18 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Document\Document.cs" />
-    <Compile Include="Document\DocumentIndex.cs" />
+    <Compile Include="Document\DocumentIndex\DocumentIndexHashTable.cs" />
+    <Compile Include="Document\DocumentIndex\FactoryDocumentIndex.cs" />
+    <Compile Include="Document\DocumentIndex\IDocumentIndex.cs" />
     <Compile Include="Document\DocumentResult.cs" />
-    <Compile Include="Document\Parser\DocParserDOCX.cs" />
-    <Compile Include="Document\Parser\DocParserPDF.cs" />
-    <Compile Include="Document\Parser\DocParserTXT.cs" />
+    <Compile Include="Document\Parser\DocParserDocxOpenXML.cs" />
+    <Compile Include="Document\Parser\DocParserDocxInterop.cs" />
+    <Compile Include="Document\Parser\DocParserPdf.cs" />
+    <Compile Include="Document\Parser\DocParserTxt.cs" />
     <Compile Include="Document\Parser\FactoryParser.cs" />
     <Compile Include="Document\Parser\IDocParser.cs" />
     <Compile Include="Document\RepositoryDocument\EnumRepositoryType.cs" />
@@ -71,10 +77,12 @@
     <Compile Include="Query\Query.cs" />
     <Compile Include="Query\QueryParser.cs" />
     <Compile Include="Useful\Useful.cs" />
+    <Compile Include="Word\Lexicon\FactoryLexicon.cs" />
+    <Compile Include="Word\Lexicon\ILexicon.cs" />
     <Compile Include="Word\Word.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Word\WordHit.cs" />
-    <Compile Include="Word\Lexicon.cs" />
+    <Compile Include="Word\Lexicon\LexiconHashtable.cs" />
     <Compile Include="Word\WordOccurrenceNode.cs" />
   </ItemGroup>
   <ItemGroup>
