--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Test</RootNamespace>
     <AssemblyName>Test</AssemblyName>
-    <TargetFrameworkVersion>v3.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -51,9 +52,9 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="RepositoryFiles\monografia_AndrezaSoares.docx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="RepositoryFiles\Copy of The Anatomy of a Large-Scale Hypertextual Web Search Engine.txt" />
     <Content Include="RepositoryFiles\The Anatomy of a Large-Scale Hypertextual Web Search Engine.txt" />
   </ItemGroup>
   <ItemGroup>
