--- a/FilesReport/App.config
+++ b/FilesReport/App.config
@@ -12,6 +12,8 @@
     <add key="reportFolder" value="D:\projetos\edoc\CodeRepository\eDoc\FilesReport\Report"/>
     <add key="logType" value="TXT"/>
     <add key="reportType" value="TXT"/>
+    <add key="documentIndexType" value="Hashtable"/>
+    <add key="lexiconType" value="Hashtable"/>
     
      <!--- Warning for longfileNameSupportType: If you have problems with files that has names with more than 255 chars, change this for true.
         Supported type"s:
