--- a/WebGuiTest/Web.config
+++ b/WebGuiTest/Web.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="pathFolderRepository" value="D:\projetos\edoc\CodeRepository\eDoc\Test\RepositoryFiles"/>
+    <add key="pathFolderRepository" value="D:\projetos\edoc\CodeRepository\eDoc\WebGuiTest\repositoryFilesTest"/>
     <add key="maxSentence" value="100"/>
-    <add key="maxResultList" value="300"/>
+    <add key="maxResultList" value="50"/>
 
     <add key="logIsActive" value="true"/>
     <add key="logSeparator" value="|"/>
@@ -11,7 +11,7 @@
     <add key="logType" value="TXT"/>
     <add key="documentIndexType" value="Hashtable"/>
     <add key="lexiconType" value="Hashtable"/>
-    <add key="virtualRepositoryPath" value="repositoryDoc"/>
+    <add key="virtualRepositoryPath" value="repositoryFilesTest"/>
     
   </appSettings>
   <connectionStrings/>
