--- a/WebGuiTest/WebGuiTest.csproj
+++ b/WebGuiTest/WebGuiTest.csproj
@@ -55,6 +55,7 @@
     <Content Include="About.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="repositoryFilesTest\é The Anatomy of a Large-Scale Hypertextual Web Search Engine.txt" />
     <Content Include="Scripts\jquery-1.4.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.1.js" />
     <Content Include="Scripts\jquery-1.4.1.min.js" />
@@ -95,6 +96,9 @@
       <Project>{D06025B5-086B-48F7-B3A7-49CA63431008}</Project>
       <Name>DocCore</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="repositoryFilesTest\monografia_AndrezaSoares.docx" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
