--- a/WebGuiTest/Web.config
+++ b/WebGuiTest/Web.config
@@ -2,6 +2,8 @@
 <configuration>
   <appSettings>
     <add key="pathFolderRepository" value="D:\projetos\edoc\CodeRepository\eDoc\WebGuiTest\repositoryFilesTest"/>
+    <add key="pathFolderIndex" value="D:\projetos\edoc\CodeRepository\eDoc\Test\IndexFiles"/>
+    
     <add key="maxSentence" value="100"/>
     <add key="maxResultList" value="50"/>
 
@@ -12,6 +14,11 @@
     <add key="documentIndexType" value="Hashtable"/>
     <add key="lexiconType" value="Hashtable"/>
     <add key="virtualRepositoryPath" value="repositoryFilesTest"/>
+    <add key="invertedFileType" value="Memory"/>
+    <!--<add key="invertedFileType" value="Memory"/>-->
+
+    <!--<add key="engineType" value="Memory"/>-->
+    <add key="engineType" value="Disk"/>
     
   </appSettings>
   <connectionStrings/>
