--- a/DocCore/App.config
+++ b/DocCore/App.config
@@ -2,8 +2,10 @@
 <configuration>
   <appSettings>
     <add key="pathFolderRepository" value="D:\projetos\edoc\CodeRepository\eDoc\Test\RepositoryFiles"/>
+    <add key="pathFolderIndex" value="D:\projetos\edoc\CodeRepository\eDoc\Test\IndexFiles"/>
+    
     <add key="maxSentence" value="100"/>
-    <add key="maxDocumentsFound" value="300"/>
+    <add key="maxResultList" value="10000"/>
 
     <add key="logIsActive" value="true"/>
     <add key="logSeparator" value="|"/>
@@ -11,6 +13,11 @@
     <add key="logType" value="TXT"/>
     <add key="documentIndexType" value="Hashtable"/>
     <add key="lexiconType" value="Hashtable"/>
+    <add key="invertedFileType" value="Memory"/>
+    <!--<add key="invertedFileType" value="Memory"/>-->
+
+    <!--<add key="engineType" value="Memory"/>-->
+    <add key="engineType" value="Disk"/>
 
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
