--- a/DocCore/DocCore.csproj
+++ b/DocCore/DocCore.csproj
@@ -30,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DocumentFormat.OpenXml, Version=2.5.5631.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -63,9 +64,15 @@
     <Compile Include="Document\RepositoryDocument\FactoryRepositoryDocument.cs" />
     <Compile Include="Document\RepositoryDocument\IRepositoryDocument.cs" />
     <Compile Include="Document\RepositoryDocument\RepositoryDocumentFolder.cs" />
-    <Compile Include="Engine\Engine.cs" />
+    <Compile Include="Indexer\FactoryIndexer.cs" />
+    <Compile Include="Indexer\IndexerDisk.cs" />
+    <Compile Include="Engine\EngineDisk.cs" />
+    <Compile Include="Engine\EngineMemory.cs" />
     <Compile Include="Engine\EngineConfiguration.cs" />
-    <Compile Include="Engine\Indexer.cs" />
+    <Compile Include="Engine\FactoryEngine.cs" />
+    <Compile Include="Engine\IEngine.cs" />
+    <Compile Include="Indexer\IIndexer.cs" />
+    <Compile Include="Indexer\IndexerMemory.cs" />
     <Compile Include="Engine\Messages.cs" />
     <Compile Include="ExecutionLog\Log.cs" />
     <Compile Include="ExecutionLog\Repository\FactoryRepositoryLog.cs" />
@@ -78,7 +85,9 @@
     <Compile Include="Query\QueryParser.cs" />
     <Compile Include="Useful\Useful.cs" />
     <Compile Include="Word\Lexicon\FactoryLexicon.cs" />
+    <Compile Include="Word\Lexicon\InvertedFileManager.cs" />
     <Compile Include="Word\Lexicon\ILexicon.cs" />
+    <Compile Include="Word\Lexicon\StorageManager.cs" />
     <Compile Include="Word\Word.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Word\WordHit.cs" />
