--- a/WebGuiTest/WebGuiTest.csproj
+++ b/WebGuiTest/WebGuiTest.csproj
@@ -55,11 +55,13 @@
     <Content Include="About.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
-    <Content Include="repositoryFilesTest\é The Anatomy of a Large-Scale Hypertextual Web Search Engine.txt" />
+    <Content Include="repositoryFilesTest\The Anatomy of a Large-Scale Hypertextual Web Search Engine.txt" />
     <Content Include="Scripts\jquery-1.4.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.1.js" />
     <Content Include="Scripts\jquery-1.4.1.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -98,7 +100,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="repositoryFilesTest\monografia_AndrezaSoares.docx" />
+    <None Include="repositoryFilesTest\monografia_AndrezaSoares.pdf" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
