--- a/WebGuiTest/Web.config
+++ b/WebGuiTest/Web.config
@@ -18,7 +18,7 @@
     <!--<add key="invertedFileType" value="Memory"/>-->
 
     <!--<add key="engineType" value="Memory"/>-->
-    <add key="engineType" value="Disk"/>
+    <add key="engineType" value="Memory"/>
     
   </appSettings>
   <connectionStrings/>
