--- a/Test/App.config
+++ b/Test/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="pathFolderRepository" value="D:\projetos\edoc\CodeRepository\eDoc\Test\RepositoryFiles"/>
+    <add key="pathFolderRepository" value="D:\projetos\edoc\RepositoryFiles"/>
     <add key="pathFolderIndex" value="D:\projetos\edoc\CodeRepository\eDoc\Test\IndexFiles"/>
     
     <add key="maxSentence" value="100"/>
@@ -16,8 +16,8 @@
     <add key="invertedFileType" value="Memory"/>
     <!--<add key="invertedFileType" value="Memory"/>-->
 
-    <!--<add key="engineType" value="Memory"/>-->
-    <add key="engineType" value="Disk"/>
+    <add key="engineType" value="Memory"/>
+    <!--<add key="engineType" value="Disk"/>-->
     
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
