Add Log for Evaluation
- Add pathFolder for Evaluation log
- Add tests for rank in console application
- Change the APP.config and WEB.config for the Evaluation Log Path.

--- a/CrawlerGUI/CrawlerGUI.csproj
+++ b/CrawlerGUI/CrawlerGUI.csproj
@@ -53,6 +53,7 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DataSearch\Themes\UPE_poli_tcc_20132.txt" />
     <Content Include="DataSearch\Themes\computer_en_us.txt" />
     <Content Include="DataSearch\Inst\brasil.txt" />
     <Content Include="DataSearch\Themes\computer_pt_br.txt" />
