--- a/WebGuiTest/Web.config
+++ b/WebGuiTest/Web.config
@@ -1,15 +1,18 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="pathFolderRepository" value="D:\projetos\edoc\CodeRepository\eDoc\WebGuiTest\repositoryFilesTest"/>
-    <add key="pathFolderIndex" value="D:\projetos\edoc\CodeRepository\eDoc\Test\IndexFiles"/>
+    <!--<add key="pathFolderRepository" value="D:\projetos\edoc\CodeRepository\eDoc\WebGuiTest\repositoryFilesTest"/>-->
+    <add key="pathFolderRepository" value="G:\RepositoryFiles\poli"/>
     
+    <add key="pathFolderIndex" value="D:\projetos\edoc\CodeRepository\eDoc\Test\IndexFiles"/>
+    <add key="pathEvaluationLog" value="G:\EvaluationLog\"/>
+
     <add key="maxSentence" value="100"/>
     <add key="maxResultList" value="50"/>
 
     <add key="logIsActive" value="true"/>
     <add key="logSeparator" value="|"/>
-    <add key="logFilePath" value="D:\projetos\edoc\CodeRepository\eDoc\WebGuiTest\Log\ExecutionLog.txt"/>
+    <add key="logFilePath" value="G:\ExecutionLog\ExecutionLog.txt"/>
     <add key="logType" value="TXT"/>
     <add key="documentIndexType" value="Hashtable"/>
     <add key="lexiconType" value="Hashtable"/>
