Burg Fix #5:   - The file version of EngineDisk ad IndexDisk do not return wordOccurrencies and WordHits.
- The file version of EngineDisk ad IndexDisk do not return
wordOccurrencies and WordHits. (fix it).

--- a/Test/App.config
+++ b/Test/App.config
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <!--<add key="pathFolderRepository" value="G:\RepositoryFiles\poli"/>-->
+    <!--<add key="pathFolderRepository" value="G:\RepositoryFiles"/>-->
     <add key="pathFolderRepository" value="D:\projetos\edoc\CodeRepository\eDoc\Test\RepositoryFiles"/>
     
-    <add key="pathFolderIndex" value="D:\projetos\edoc\CodeRepository\eDoc\Test\IndexFiles"/>
+    <add key="pathFolderIndex" value="G:\IndexFiles"/>
     <add key="pathEvaluationLog" value="G:\EvaluationLog\"/>
     
     <add key="maxSentence" value="100"/>
@@ -16,7 +16,7 @@
     <add key="logType" value="TXT"/>
     <add key="documentIndexType" value="Hashtable"/>
     <add key="lexiconType" value="Hashtable"/>
-    <add key="invertedFileType" value="Memory"/>
+    
     <!--<add key="invertedFileType" value="Memory"/>-->
 
     <add key="engineType" value="Memory"/>
