B00.007 - Simple TF-IDF Rank Function
- Add Factory and Class for Rank Functions
- Add option for select the rank function tu use in the app.config
- Simple tf-idf ranked function
- Add RankTypeFunction in the logs (evaluation and execution)

--- a/DocCore/App.config
+++ b/DocCore/App.config
@@ -19,5 +19,9 @@
     <!--<add key="engineType" value="Memory"/>-->
     <add key="engineType" value="Disk"/>
 
+    <add key="rankTypeFunction" value="simple-tf-idf"/>
+    
+    
+
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
