--- a/WebGuiTest/Web.config
+++ b/WebGuiTest/Web.config
@@ -22,7 +22,9 @@
 
     <!--<add key="engineType" value="Memory"/>-->
     <add key="engineType" value="Memory"/>
-    
+
+    <add key="rankTypeFunction" value="simple-tf-idf"/>
+
   </appSettings>
   <connectionStrings/>
   <system.web>
