--- a/DocCore/DocCore.csproj
+++ b/DocCore/DocCore.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Query\QueryParser.cs" />
     <Compile Include="Rank\FactoryRankFunction.cs" />
     <Compile Include="Rank\IRankFunction.cs" />
+    <Compile Include="Rank\RankFunctionBM25.cs" />
     <Compile Include="Rank\RankFunctionSimpleTF_IDF.cs" />
     <Compile Include="Useful\Useful.cs" />
     <Compile Include="Word\Lexicon\FactoryLexicon.cs" />
