B00.007 - Add BM25/Okapi and Pivoted document Length Normalization VSM
- Add configuration parameters in app.config for these ranking functions
- Add the two ranking Functions :)
- Change the factory
- Change the signature of the interface for ranking call

--- a/DocCore/DocCore.csproj
+++ b/DocCore/DocCore.csproj
@@ -86,6 +86,8 @@
     <Compile Include="Query\QueryParser.cs" />
     <Compile Include="Rank\FactoryRankFunction.cs" />
     <Compile Include="Rank\IRankFunction.cs" />
+    <Compile Include="Rank\RankFunctionPivotedLengthNormVSM.cs" />
+    <Compile Include="Rank\RankFunctionBM25_Okapi.cs" />
     <Compile Include="Rank\RankFunctionBM25.cs" />
     <Compile Include="Rank\RankFunctionSimpleTF_IDF.cs" />
     <Compile Include="Useful\Useful.cs" />
