--- a/WebGuiTest/Web.config
+++ b/WebGuiTest/Web.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <!--<add key="pathFolderRepository" value="D:\projetos\edoc\CodeRepository\eDoc\WebGuiTest\repositoryFilesTest"/>-->
-    <add key="pathFolderRepository" value="G:\RepositoryFiles\poli"/>
-    
-    <add key="pathFolderIndex" value="D:\projetos\edoc\CodeRepository\eDoc\Test\IndexFiles"/>
+    <add key="pathFolderRepository" value="G:\RepositoryFiles"/>
+    <!--<add key="pathfolderrepository" value="d:\projetos\edoc\coderepository\edoc\test\repositoryfiles"/>-->
+
+    <add key="pathFolderIndex" value="G:\IndexFiles"/>
     <add key="pathEvaluationLog" value="G:\EvaluationLog\"/>
 
     <add key="maxSentence" value="100"/>
-    <add key="maxResultList" value="50"/>
+    <add key="maxResultList" value="10000"/>
 
     <add key="logIsActive" value="true"/>
     <add key="logSeparator" value="|"/>
@@ -16,14 +16,25 @@
     <add key="logType" value="TXT"/>
     <add key="documentIndexType" value="Hashtable"/>
     <add key="lexiconType" value="Hashtable"/>
-    <add key="virtualRepositoryPath" value="repositoryFilesTest"/>
-    <add key="invertedFileType" value="Memory"/>
+
     <!--<add key="invertedFileType" value="Memory"/>-->
 
-    <!--<add key="engineType" value="Memory"/>-->
     <add key="engineType" value="Memory"/>
+    <!--<add key="engineType" value="Disk"/>-->
 
-    <add key="rankTypeFunction" value="simple-tf-idf"/>
+    <!--ranking function parameters-->
+
+    <!--<add key="rankTypeFunction" value="simple-tf-idf"/>-->
+    <!--<add key="rankTypeFunction" value="bm25"/>-->
+    <add key="rankTypeFunction" value="bm25_okapi"/>
+    <add key="bNormalizationfactor" value="0,75"/>
+    <add key="bm25OkapiK1factor" value="1,2"/>
+    <add key="bm25OkapiK3factor" value="1,2"/>
+
+    <add key="rankTypeFunction" value="pivoted_len_norm_vsm"/>
+    <add key="sNormalizationfactor" value="0,20"/>
+
+
 
   </appSettings>
   <connectionStrings/>
